# property-vision

./: .gitignore  Dockerfile  pyproject.toml
notebooks/: resnet50.ipynb
src/: main.py
