[tool.poetry]
name = "property-vision"
version = "0.1.0"
description = ""
authors = ["howarudo"]
license = "MIT"
readme = "README.md"
packages = [{include = "property_vision"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"
timm = "^1.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
